dataset creation and numpy iterator

--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0f997e8e",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-29 20:16:31.615090: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -36,24 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d17cff02",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['happy', 'sad']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import imghdr\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
     "\n",
     "data_dir = 'data'\n",
     "image_exts = ['jpeg', 'jpg', 'bmp', 'png']"
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "83ddf6dd",
    "metadata": {},
    "outputs": [],
@@ -76,7 +75,53 @@
     "                print('Image not in ext list {}'.format(image_path))\n",
     "                os.remove(image_path)\n",
     "        except Exception as e:\n",
-    "            print('Issue with image {}'.format(image_path))"
+    "            print('Issue with image {}'.format(image_path))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5c91436",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 305 files belonging to 2 classes.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1767020836.375854     911 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 3539 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 4050 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = tf.keras.utils.image_dataset_from_directory('data') # Keras built in dataset creation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b01b931f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_iterator = data.as_numpy_iterator() # Cannot iterate through keras created dataset so have to convert it to a numpy iterator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "797ee619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = data_iterator.next()"
    ]
   }
  ],
